--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       </div>
 
       <div class="hd" data-hd="proximas" style="display:none">
-        <h2>📘 Próximas Aulas</h2>
+        <h2>📘 Próximas aulas</h2>
         <span class="tag warn">Em breve</span>
       </div>
 
@@ -388,7 +388,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
   <script>
-    // ✅ COLE AQUI a URL do seu Web App do Apps Script:
+    // ✅ URL do Web App do Apps Script:
     const DESTAQUE_API = "https://script.google.com/macros/s/AKfycbxxUkPoPIJ0YMd6C9W-lW-A17kqTWgapFud-dgX627s86h2e8EImepvjAu-9LUBUic3SQ/exec";
 
     const tabs = Array.from(document.querySelectorAll('.tab'));
@@ -422,7 +422,6 @@
       q.value = "";
       applyFilter();
 
-      // se entrar no destaque, garante que carregou
       if (tabName === "destaque") loadDestaque();
     }
 
@@ -476,6 +475,8 @@
         destaqueStatus.textContent = "Carregando o destaque…";
         const url = DESTAQUE_API + "?action=get&ts=" + Date.now();
         const res = await fetch(url, { method: "GET" });
+
+        // Se o browser bloquear por CORS, cai no catch
         const data = await res.json();
 
         if(!data.ok) throw new Error(data.error || "Falha ao carregar.");
@@ -490,7 +491,6 @@
     }
 
     function openModal(){
-      // Carrega o conteúdo atual no editor
       quill.root.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Escreva aqui…</p>";
       saveStatus.textContent = "—";
       pass.value = "";
@@ -512,30 +512,34 @@
       try{
         saveStatus.textContent = "Salvando…";
         const html = quill.root.innerHTML;
-        const password = pass.value;
+        const password = (pass.value || "").trim();
 
-const form = new URLSearchParams();
-form.set("action", "save");
-form.set("password", password);
-form.set("html", html);
+        if (!password) {
+          saveStatus.textContent = "❌ Digite a senha.";
+          return;
+        }
 
-const res = await fetch(DESTAQUE_API, {
-  method: "POST",
-  body: form
-});
+        const form = new URLSearchParams();
+        form.set("action", "save");
+        form.set("password", password);
+        form.set("html", html);
 
+        // ✅ No GitHub Pages, o navegador pode bloquear leitura da resposta (CORS).
+        // Então enviamos no-cors e confirmamos recarregando o conteúdo.
+        await fetch(DESTAQUE_API, {
+          method: "POST",
+          body: form,
+          mode: "no-cors"
+        });
 
-
-        const data = await res.json();
-        if(!data.ok) throw new Error(data.error || "Falha ao salvar.");
-
+        saveStatus.textContent = "✅ Salvo! Atualizando…";
+        await loadDestaque();
         saveStatus.textContent = "✅ Salvo com sucesso!";
-        lastLoadedHtml = html;
-        destaqueView.innerHTML = html;
-        destaqueStatus.textContent = "✅ Destaque atualizado.";
+
         setTimeout(closeModal, 600);
       }catch(err){
-        saveStatus.textContent = "❌ " + (err.message || "Erro");
+        saveStatus.textContent = "❌ Erro ao salvar. Tente novamente.";
+        console.error(err);
       }
     });
 
