--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
         <div class="tab" data-tab="atividades" role="tab" aria-selected="false">📝 Atividades</div>
         <div class="tab" data-tab="pdfs" role="tab" aria-selected="false">📚 PDFs</div>
         <div class="tab" data-tab="proximas" role="tab" aria-selected="false">📘 Próximas aulas</div>
+        <!-- ✅ Destaque primeiro (aba ativa ao abrir) -->
         <div class="tab active" data-tab="destaque" role="tab" aria-selected="true">⭐ Destaque</div>
         <div class="tab" data-tab="avisos" role="tab" aria-selected="false">📢 Avisos</div>
       </div>
@@ -427,8 +428,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
   <script>
-    // ✅ URL do Web App do Apps Script:
-    const API = "https://script.google.com/macros/s/AKfycbxxUkPoPIJ0YMd6C9W-lW-A17kqTWgapFud-dgX627s86h2e8EImepvjAu-9LUBUic3SQ/exec";
+    // ✅ URL do Web App do Apps Script (ATUALIZADA COM A SUA)
+    const API = "https://script.google.com/macros/s/AKfycbyGQj5u2WPEwtQaBAH0lnFkPMxybqO1krxTESpyqHhY1H-Bt3jUXxL2YbKOJsPIbR-fwg/exec";
 
     const tabs = Array.from(document.querySelectorAll('.tab'));
     const panels = Array.from(document.querySelectorAll('.panel'));
@@ -519,13 +520,13 @@
         if(it && it.enabled === false) return;
 
         const title = escapeHtml(it.title);
-        const meta = escapeHtml(it.meta);
-        const link = String(it.link||"").trim();
-        const tags = escapeHtml(it.tags || "");
+        const meta  = escapeHtml(it.meta);
+        const link  = String(it.link||"").trim();
+        const tags  = escapeHtml(it.tags || "");
 
         const btnText = escapeHtml(it.btn || (link ? "Abrir ↗" : "Em breve"));
-        const style = (it.style || (section==="atividades" ? "primary" : "primary")).trim();
-        const badge = escapeHtml(it.badge || "");
+        const style   = (it.style || (section==="atividades" ? "primary" : "primary")).trim();
+        const badge   = escapeHtml(it.badge || "");
 
         const isDisabled = !link || link === "#";
         const btnHtml = isDisabled
@@ -547,13 +548,12 @@
     }
 
     async function loadAll(){
-      // Seu cenário anterior já lia JSON via fetch.
-      // Mantemos assim para não bagunçar o que já estava funcionando.
       const url = API + "?action=getAll&ts=" + Date.now();
       const res = await fetch(url, { method:"GET" });
       const data = await res.json();
 
       if(!data.ok) throw new Error(data.error || "Falha ao carregar.");
+
       cache = {
         atividades: data.data.atividades || [],
         pdfs: data.data.pdfs || [],
@@ -565,7 +565,6 @@
       renderList("pdfs", cache.pdfs);
       renderList("proximas", cache.proximas);
 
-      // atualiza destaque em cache também
       if(cache.destaqueHtml){
         lastLoadedHtml = cache.destaqueHtml;
         destaqueView.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Nenhum conteúdo ainda.</p>";
@@ -602,7 +601,7 @@
     async function loadDestaque(){
       try{
         destaqueStatus.textContent = "Carregando o destaque…";
-        // se já veio no getAll, usa cache e não depende de outra chamada
+
         if (cache.destaqueHtml) {
           lastLoadedHtml = cache.destaqueHtml;
           destaqueView.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Nenhum conteúdo ainda.</p>";
@@ -614,6 +613,7 @@
         const res = await fetch(url, { method: "GET" });
         const data = await res.json();
         if(!data.ok) throw new Error(data.error || "Falha ao carregar.");
+
         lastLoadedHtml = data.html || "";
         destaqueView.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Nenhum conteúdo ainda.</p>";
         destaqueStatus.textContent = "✅ Destaque carregado.";
@@ -655,7 +655,7 @@
         await fetch(API, { method:"POST", body: form, mode:"no-cors" });
 
         saveStatus.textContent = "✅ Salvo! Recarregando…";
-        cache.destaqueHtml = ""; // força reload via loadAll
+        cache.destaqueHtml = "";
         await loadAll();
         saveStatus.textContent = "✅ Salvo com sucesso!";
         setTimeout(closeModal, 600);
@@ -696,7 +696,7 @@
     function renderEditorRows(items){
       const safe = Array.isArray(items) ? items : [];
       listTbody.innerHTML = "";
-      safe.forEach((it, idx)=> addRowToEditor(it));
+      safe.forEach(it=> addRowToEditor(it));
       if(!safe.length) addRowToEditor({});
     }
 
@@ -727,18 +727,15 @@
       `;
       row.querySelector('[data-k="style"]').value = (it.style || "primary");
 
-      row.querySelector("[data-remove]").addEventListener("click", ()=>{
-        row.remove();
-      });
-
+      row.querySelector("[data-remove]").addEventListener("click", ()=> row.remove());
       listTbody.appendChild(row);
     }
 
     function readEditorItems(){
       const rows = Array.from(listTbody.querySelectorAll("tr"));
-      const items = rows.map(tr=>{
+      return rows.map(tr=>{
         const get = (k)=> tr.querySelector(`[data-k="${k}"]`);
-        const obj = {
+        return {
           title: (get("title").value||"").trim(),
           meta: (get("meta").value||"").trim(),
           link: (get("link").value||"").trim(),
@@ -746,12 +743,9 @@
           btn: (get("btn").value||"").trim(),
           style: (get("style").value||"primary").trim(),
           enabled: !!get("enabled").checked,
-          badge: "" // opcional (se quiser, eu adiciono campo depois)
+          badge: ""
         };
-        return obj;
       }).filter(x => x.title);
-
-      return items;
     }
 
     document.querySelectorAll("[data-manage]").forEach(btn=>{
@@ -788,14 +782,13 @@
       }
     });
 
-    // ✅ inicia: força abrir no destaque
+    // ✅ inicia no Destaque
     setActive("destaque");
     applyFilter();
 
     // carrega tudo 1x
     loadAll().catch(err=>{
       console.error(err);
-      // fallback mínimo (para não ficar vazio)
       renderList("atividades", []);
       renderList("pdfs", []);
       renderList("proximas", []);
