--- a/index.html
+++ b/index.html
@@ -6,48 +6,32 @@
   <title>Área do Aluno • Instituto ALFA</title>
 
   <link rel="icon" type="image/png" href="https://mickaelfelipe01-beep.github.io/Atividades/aulas-informatica-alpha/imagens/Design%20sem%20nome%20(8).png">
-
-  <!-- Editor "tipo Word" (Quill) -->
   <link href="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.snow.css" rel="stylesheet"/>
 
   <style>
     :root{
-      --bg1:#f6f7fb;
-      --bg2:#eef2f7;
-      --card:#ffffff;
-      --card2:#ffffff;
-      --line:rgba(15,23,42,.10);
-      --text:#0f172a;
-      --muted:rgba(15,23,42,.65);
-      --brand:#16a34a;
-      --brand2:#f97316;
-      --shadow: 0 18px 45px rgba(2,6,23,.08);
-      --radius: 18px;
-      --radius2: 14px;
+      --bg1:#f6f7fb; --bg2:#eef2f7; --card:#ffffff; --card2:#ffffff;
+      --line:rgba(15,23,42,.10); --text:#0f172a; --muted:rgba(15,23,42,.65);
+      --brand:#16a34a; --brand2:#f97316; --shadow: 0 18px 45px rgba(2,6,23,.08);
+      --radius: 18px; --radius2: 14px;
       --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
     }
-
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      font-family:var(--font);
-      color:var(--text);
+      margin:0; font-family:var(--font); color:var(--text);
       background:
         radial-gradient(900px 450px at 10% 10%, rgba(22,163,74,.10), transparent 55%),
         radial-gradient(900px 450px at 90% 10%, rgba(249,115,22,.10), transparent 55%),
         linear-gradient(160deg, var(--bg1), var(--bg2));
     }
-
     .wrap{max-width:1100px;margin:0 auto;padding:28px 18px 40px}
-
     header{
       display:flex;align-items:center;justify-content:space-between;gap:16px;
       padding:18px;border:1px solid var(--line);
       background: linear-gradient(180deg, rgba(255,255,255,.96), rgba(255,255,255,.90));
       border-radius: var(--radius); box-shadow: var(--shadow);
     }
-
     .brand{display:flex;align-items:center;gap:14px;min-width:240px}
     .logo{
       width:54px;height:54px;border-radius:16px;background:#fff;
@@ -55,20 +39,20 @@
       display:grid;place-items:center;overflow:hidden;flex:0 0 auto;
     }
     .logo img{width:100%;height:100%;object-fit:cover}
-
     .title{display:flex;flex-direction:column;line-height:1.15}
     .title strong{font-size:18px; letter-spacing:.2px}
     .title span{font-size:13px;color:var(--muted)}
-
     .actions{display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end}
-
     .pill{
       display:inline-flex;align-items:center;gap:10px;
       padding:10px 12px;border:1px solid var(--line);
       background: rgba(255,255,255,.75);
       border-radius:999px;color:var(--muted);font-size:13px;white-space:nowrap;
     }
-
+    .pill select{
+      border:0; outline:0; background:transparent; font-weight:800; color:var(--text);
+      cursor:pointer;
+    }
     .search{
       display:flex;align-items:center;gap:10px;
       padding:10px 14px;border:1px solid var(--line);
@@ -76,7 +60,6 @@
     }
     .search input{width:100%;border:0;outline:0;background:transparent;color:var(--text);font-size:14px}
     .search input::placeholder{color:rgba(15,23,42,.45)}
-
     @media (max-width: 920px){
       .actions{justify-content:flex-start}
       .search{min-width:0;width:100%}
@@ -90,7 +73,6 @@
       box-shadow: var(--shadow);
       overflow:hidden;
     }
-
     .tabs{display:flex;gap:10px;padding:14px 14px 0;flex-wrap:wrap}
     .tab{
       border:1px solid var(--line);
@@ -102,10 +84,8 @@
     }
     .tab:hover{transform: translateY(-1px); background: rgba(15,23,42,.06)}
     .tab.active{color: var(--text); border-color: rgba(22,163,74,.35); background: rgba(22,163,74,.12)}
-
     .panel{display:none;padding:14px 18px 18px}
     .panel.active{display:block}
-
     .hd{
       padding:16px 18px;display:flex;align-items:center;justify-content:space-between;gap:10px;
       border-top:1px solid rgba(15,23,42,.06);
@@ -113,16 +93,13 @@
       background: rgba(15,23,42,.02);
     }
     .hd h2{margin:0;font-size:15px;letter-spacing:.25px;display:flex;align-items:center;gap:10px}
-
     .tag{
       font-size:12px;padding:6px 10px;border-radius:999px;
       border:1px solid var(--line);background:#fff;color:var(--muted);
     }
     .tag.ok{border-color: rgba(22,163,74,.35); background: rgba(22,163,74,.10); color:#0b3b1c}
     .tag.warn{border-color: rgba(249,115,22,.35); background: rgba(249,115,22,.10); color:#5a2b00}
-
     .list{display:flex;flex-direction:column;gap:10px;margin-top:12px}
-
     .item{
       display:flex;align-items:flex-start;justify-content:space-between;gap:12px;
       padding:12px 12px;border:1px solid rgba(15,23,42,.10);
@@ -131,7 +108,6 @@
     .item .left{display:flex;flex-direction:column;gap:4px;min-width:0}
     .item .name{font-weight:800;font-size:14px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
     .item .meta{font-size:12px;color:var(--muted);line-height:1.25}
-
     .btn{
       display:inline-flex;align-items:center;justify-content:center;gap:8px;
       padding:9px 12px;border-radius:12px;border:1px solid rgba(15,23,42,.12);
@@ -146,14 +122,12 @@
     .btn.orange{border-color: rgba(249,115,22,.35); background: rgba(249,115,22,.10)}
     .btn.ghost{background: rgba(15,23,42,.02)}
     .btn.danger{border-color: rgba(239,68,68,.30); background: rgba(239,68,68,.10)}
-
     .note{
       margin-top:12px;padding:12px 12px;border-radius: var(--radius2);
       border:1px dashed rgba(15,23,42,.18);
       background: rgba(15,23,42,.02);
       color: var(--muted);font-size:12.5px;line-height:1.35;
     }
-
     .article{
       background:#fff;
       border:1px solid rgba(15,23,42,.10);
@@ -162,8 +136,6 @@
       overflow-wrap:anywhere;
     }
     .article img{max-width:100%; border-radius:12px}
-
-    /* Modal genérico */
     .modal-backdrop{
       position:fixed; inset:0;
       background: rgba(2,6,23,.45);
@@ -201,8 +173,6 @@
     .status{font-size:12px; color: var(--muted)}
     footer{margin-top:16px;padding:14px 16px;text-align:center;color: rgba(15,23,42,.55);font-size:12px}
     .muted{color:var(--muted)}
-
-    /* tabela editor listas */
     .table{
       width:100%;
       border-collapse:separate;
@@ -250,7 +220,17 @@
       </div>
 
       <div class="actions">
+        <!-- ✅ Turma -->
+        <div class="pill" title="Selecionar Turma">
+          👥 Turma:
+          <select id="turmaSelect" aria-label="Selecionar turma">
+            <option value="A">A</option>
+            <option value="B">B</option>
+          </select>
+        </div>
+
         <div class="pill">📌 Salve este link nos favoritos</div>
+
         <div class="search" title="Pesquisar na aba atual">
           🔎 <input id="q" type="search" placeholder="Pesquisar nesta aba..." />
         </div>
@@ -262,7 +242,6 @@
         <div class="tab" data-tab="atividades" role="tab" aria-selected="false">📝 Atividades</div>
         <div class="tab" data-tab="pdfs" role="tab" aria-selected="false">📚 PDFs</div>
         <div class="tab" data-tab="proximas" role="tab" aria-selected="false">📘 Próximas aulas</div>
-        <!-- ✅ Destaque primeiro (aba ativa ao abrir) -->
         <div class="tab active" data-tab="destaque" role="tab" aria-selected="true">⭐ Destaque</div>
         <div class="tab" data-tab="avisos" role="tab" aria-selected="false">📢 Avisos</div>
       </div>
@@ -272,7 +251,7 @@
         <h2>📝 Atividades da Semana</h2>
         <div class="row" style="justify-content:flex-end">
           <button class="btn ghost" type="button" data-manage="atividades">⚙️ Gerenciar</button>
-          <span class="tag ok">Atualizado</span>
+          <span class="tag ok" id="tagTurmaAtv">Turma</span>
         </div>
       </div>
 
@@ -280,7 +259,7 @@
         <h2>📚 PDFs das Aulas (Passadas e Materiais)</h2>
         <div class="row" style="justify-content:flex-end">
           <button class="btn ghost" type="button" data-manage="pdfs">⚙️ Gerenciar</button>
-          <span class="tag">Google Drive</span>
+          <span class="tag" id="tagTurmaPdf">Turma</span>
         </div>
       </div>
 
@@ -288,7 +267,7 @@
         <h2>📘 Próximas aulas</h2>
         <div class="row" style="justify-content:flex-end">
           <button class="btn ghost" type="button" data-manage="proximas">⚙️ Gerenciar</button>
-          <span class="tag warn">Em breve</span>
+          <span class="tag warn" id="tagTurmaProx">Turma</span>
         </div>
       </div>
 
@@ -400,18 +379,21 @@
 
         <div style="height:12px"></div>
 
-        <div class="small">Dica: use <b>tags</b> para facilitar a busca (ex.: "aula 03 windows internet").</div>
+        <div class="small">
+          Itens são separados por <b>Turma</b>. O aluno vê só a turma selecionada no topo.
+        </div>
         <div style="height:10px"></div>
 
         <table class="table">
           <thead>
             <tr>
-              <th style="width:22%">Título</th>
-              <th style="width:22%">Meta</th>
+              <th style="width:18%">Título</th>
+              <th style="width:18%">Meta</th>
               <th style="width:18%">Link</th>
-              <th style="width:14%">Tags</th>
+              <th style="width:12%">Tags</th>
               <th style="width:10%">Botão</th>
-              <th style="width:8%">Estilo</th>
+              <th style="width:10%">Estilo</th>
+              <th style="width:8%">Turma</th>
               <th style="width:6%">Ações</th>
             </tr>
           </thead>
@@ -428,7 +410,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
   <script>
-    // ✅ URL do Web App do Apps Script (ATUALIZADA COM A SUA)
     const API = "https://script.google.com/macros/s/AKfycbyGQj5u2WPEwtQaBAH0lnFkPMxybqO1krxTESpyqHhY1H-Bt3jUXxL2YbKOJsPIbR-fwg/exec";
 
     const tabs = Array.from(document.querySelectorAll('.tab'));
@@ -436,25 +417,54 @@
     const headers = Array.from(document.querySelectorAll('.hd'));
     const q = document.getElementById('q');
 
+    const turmaSelect = document.getElementById("turmaSelect");
+    const tagTurmaAtv = document.getElementById("tagTurmaAtv");
+    const tagTurmaPdf = document.getElementById("tagTurmaPdf");
+    const tagTurmaProx = document.getElementById("tagTurmaProx");
+
     const listEls = {
       atividades: document.getElementById("list-atividades"),
       pdfs: document.getElementById("list-pdfs"),
       proximas: document.getElementById("list-proximas"),
     };
 
-    let cache = {
-      atividades: [],
-      pdfs: [],
-      proximas: [],
-      destaqueHtml: ""
-    };
+    let cache = { atividades:[], pdfs:[], proximas:[], destaqueHtml:"" };
 
     function norm(s){
-      return (s||"")
-        .toLowerCase()
-        .normalize("NFD")
-        .replace(/[\u0300-\u036f]/g, "")
-        .trim();
+      return (s||"").toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "").trim();
+    }
+
+    function getUrlParam(name){
+      const u = new URL(location.href);
+      return (u.searchParams.get(name) || "").trim();
+    }
+
+    function setUrlParam(name, value){
+      const u = new URL(location.href);
+      u.searchParams.set(name, value);
+      history.replaceState(null, "", u.toString());
+    }
+
+    function getTurma(){
+      const fromUrl = getUrlParam("turma");
+      const fromLS = localStorage.getItem("ALFA_TURMA") || "";
+      const t = (fromUrl || fromLS || "A").toUpperCase();
+      return (t === "B") ? "B" : "A";
+    }
+
+    function setTurma(t){
+      const tt = (t || "A").toUpperCase();
+      localStorage.setItem("ALFA_TURMA", tt);
+      setUrlParam("turma", tt);
+      turmaSelect.value = tt;
+      tagTurmaAtv.textContent  = "Turma " + tt;
+      tagTurmaPdf.textContent  = "Turma " + tt;
+      tagTurmaProx.textContent = "Turma " + tt;
+
+      // re-render
+      renderList("atividades", cache.atividades);
+      renderList("pdfs", cache.pdfs);
+      renderList("proximas", cache.proximas);
     }
 
     function setActive(tabName){
@@ -464,13 +474,8 @@
         t.setAttribute('aria-selected', active ? 'true' : 'false');
       });
 
-      panels.forEach(p=>{
-        p.classList.toggle('active', p.dataset.panel === tabName);
-      });
-
-      headers.forEach(h=>{
-        h.style.display = (h.dataset.hd === tabName) ? '' : 'none';
-      });
+      panels.forEach(p=> p.classList.toggle('active', p.dataset.panel === tabName));
+      headers.forEach(h=> h.style.display = (h.dataset.hd === tabName) ? '' : 'none');
 
       q.value = "";
       applyFilter();
@@ -504,29 +509,37 @@
         .replaceAll("'","&#039;");
     }
 
+    function itemMatchesTurma(it, turma){
+      const v = String(it?.turma || "").trim().toUpperCase();
+      // ✅ Sem turma definida => aparece em ambas (útil para “GERAL”)
+      if (!v) return true;
+      if (v === "GERAL" || v === "TODAS") return true;
+      return v === turma;
+    }
+
     function renderList(section, items){
       const host = listEls[section];
       host.innerHTML = "";
 
-      if(!items || !items.length){
+      const turma = getTurma();
+      const filtered = (items || []).filter(it => it && it.enabled !== false && itemMatchesTurma(it, turma));
+
+      if(!filtered.length){
         host.innerHTML = `
           <div class="note" style="margin-top:0">
-            ⚠️ Nenhum item cadastrado ainda. Clique em <b>⚙️ Gerenciar</b> para adicionar.
+            ⚠️ Nenhum item cadastrado para a <b>Turma ${escapeHtml(turma)}</b>.
+            Clique em <b>⚙️ Gerenciar</b> para adicionar.
           </div>`;
         return;
       }
 
-      items.forEach(it=>{
-        if(it && it.enabled === false) return;
-
+      filtered.forEach(it=>{
         const title = escapeHtml(it.title);
         const meta  = escapeHtml(it.meta);
         const link  = String(it.link||"").trim();
         const tags  = escapeHtml(it.tags || "");
-
         const btnText = escapeHtml(it.btn || (link ? "Abrir ↗" : "Em breve"));
-        const style   = (it.style || (section==="atividades" ? "primary" : "primary")).trim();
-        const badge   = escapeHtml(it.badge || "");
+        const style   = (it.style || "primary").trim();
 
         const isDisabled = !link || link === "#";
         const btnHtml = isDisabled
@@ -537,7 +550,7 @@
           <div class="item" data-tags="${tags} ${title} ${meta}">
             <div class="left">
               <div class="name">${title}</div>
-              <div class="meta">${meta}${badge ? " • " + badge : ""}</div>
+              <div class="meta">${meta}</div>
             </div>
             ${btnHtml}
           </div>
@@ -551,7 +564,6 @@
       const url = API + "?action=getAll&ts=" + Date.now();
       const res = await fetch(url, { method:"GET" });
       const data = await res.json();
-
       if(!data.ok) throw new Error(data.error || "Falha ao carregar.");
 
       cache = {
@@ -571,7 +583,7 @@
       }
     }
 
-    // -------- Destaque da semana (viewer + editor) --------
+    // -------- Destaque --------
     const destaqueView = document.getElementById("destaqueView");
     const destaqueStatus = document.getElementById("destaqueStatus");
     const btnEditar = document.getElementById("btnEditarDestaque");
@@ -584,16 +596,7 @@
 
     const quill = new Quill('#editor', {
       theme: 'snow',
-      modules: {
-        toolbar: [
-          [{ header: [1, 2, 3, false] }],
-          ['bold', 'italic', 'underline', 'strike'],
-          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
-          [{ 'align': [] }],
-          ['link', 'image'],
-          ['clean']
-        ]
-      }
+      modules: { toolbar: [[{ header: [1, 2, 3, false] }], ['bold','italic','underline','strike'], [{ 'list': 'ordered' }, { 'list': 'bullet' }], [{ 'align': [] }], ['link','image'], ['clean']] }
     });
 
     let lastLoadedHtml = "";
@@ -601,19 +604,16 @@
     async function loadDestaque(){
       try{
         destaqueStatus.textContent = "Carregando o destaque…";
-
         if (cache.destaqueHtml) {
           lastLoadedHtml = cache.destaqueHtml;
           destaqueView.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Nenhum conteúdo ainda.</p>";
           destaqueStatus.textContent = "✅ Destaque carregado.";
           return;
         }
-
         const url = API + "?action=get&ts=" + Date.now();
         const res = await fetch(url, { method: "GET" });
         const data = await res.json();
         if(!data.ok) throw new Error(data.error || "Falha ao carregar.");
-
         lastLoadedHtml = data.html || "";
         destaqueView.innerHTML = lastLoadedHtml || "<h2>Destaque da Semana</h2><p>Nenhum conteúdo ainda.</p>";
         destaqueStatus.textContent = "✅ Destaque carregado.";
@@ -635,7 +635,6 @@
       backdrop.classList.remove("show");
       backdrop.setAttribute("aria-hidden","true");
     }
-
     btnEditar.addEventListener("click", openModal);
     btnFecharModal.addEventListener("click", closeModal);
     backdrop.addEventListener("click", (e)=>{ if(e.target === backdrop) closeModal(); });
@@ -665,7 +664,7 @@
       }
     });
 
-    // -------- Gerenciar listas (Atividades / PDFs / Próximas) --------
+    // -------- Gerenciar listas --------
     const listBackdrop = document.getElementById("listBackdrop");
     const btnFecharList = document.getElementById("btnFecharList");
     const btnSalvarList = document.getElementById("btnSalvarList");
@@ -674,7 +673,6 @@
     const listStatus = document.getElementById("listStatus");
     const listTitle = document.getElementById("listTitle");
     const listTbody = document.getElementById("listTbody");
-
     let currentSection = "atividades";
 
     function openListModal(section){
@@ -687,7 +685,6 @@
       listBackdrop.setAttribute("aria-hidden","false");
       setTimeout(()=> listPass.focus(), 50);
     }
-
     function closeListModal(){
       listBackdrop.classList.remove("show");
       listBackdrop.setAttribute("aria-hidden","true");
@@ -702,6 +699,7 @@
 
     function addRowToEditor(it){
       const row = document.createElement("tr");
+      const turma = (it.turma || getTurma() || "A").toUpperCase();
       row.innerHTML = `
         <td><input data-k="title" placeholder="Ex: Atividade — Aula 03" value="${escapeHtml(it.title||"")}"></td>
         <td><input data-k="meta" placeholder="Ex: Prazo: sexta-feira" value="${escapeHtml(it.meta||"")}"></td>
@@ -722,10 +720,16 @@
           </div>
         </td>
         <td>
-          <button class="btn danger" type="button" data-remove>Remover</button>
+          <select data-k="turma">
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="GERAL">GERAL</option>
+          </select>
         </td>
+        <td><button class="btn danger" type="button" data-remove>Remover</button></td>
       `;
       row.querySelector('[data-k="style"]').value = (it.style || "primary");
+      row.querySelector('[data-k="turma"]').value = (turma === "B" ? "B" : turma === "GERAL" ? "GERAL" : "A");
 
       row.querySelector("[data-remove]").addEventListener("click", ()=> row.remove());
       listTbody.appendChild(row);
@@ -743,7 +747,7 @@
           btn: (get("btn").value||"").trim(),
           style: (get("style").value||"primary").trim(),
           enabled: !!get("enabled").checked,
-          badge: ""
+          turma: (get("turma").value||"").trim()
         };
       }).filter(x => x.title);
     }
@@ -782,11 +786,15 @@
       }
     });
 
+    // ✅ Inicialização de turma
+    turmaSelect.value = getTurma();
+    setTurma(getTurma());
+    turmaSelect.addEventListener("change", ()=> setTurma(turmaSelect.value));
+
     // ✅ inicia no Destaque
     setActive("destaque");
     applyFilter();
 
-    // carrega tudo 1x
     loadAll().catch(err=>{
       console.error(err);
       renderList("atividades", []);
